--- a/backend/package.json
+++ b/backend/package.json
@@ -10,15 +10,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/fastify-multipart": "^0.7.0",
     "@types/node": "^20.11.16",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@fastify/multipart": "^8.2.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.0",
-    "fastify-multipart": "^5.4.0",
     "ioredis": "^5.3.2",
     "ipfs-http-client": "^60.0.1",
     "web3": "^4.6.0",
