--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@fastify/multipart": "^8.2.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.0",
+    "helia": "^4.1.0",
     "ioredis": "^5.3.2",
     "ipfs-http-client": "^60.0.1",
     "web3": "^4.6.0",
