--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@rainbow-me/rainbowkit": "2",
     "@tanstack/react-query": "^5.28.4",
+    "@wagmi/core": "^2.6.9",
     "axios": "^1.6.8",
+    "framer-motion": "^6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
